@@ -104,15 +104,15 @@ my %schemas = (
 my $external_deps = {
     "jpgraph_v1" => {
         "url_path"  => "http://hem.bredband.net/jpgraph/",
-        "file_name" => "jpgraph-1.26.tar.gz",
+        "file_name" => "jpgraph-1.27.tar.gz",
         "install_path" =>
-            "$install_dir/html/admin/common/jpgraph/jpgraph-1.26"
+            "$install_dir/html/admin/common/jpgraph/jpgraph-1.27"
     },
     "jpgraph_v2" => {
         "url_path"  => "http://hem.bredband.net/jpgraph2/",
-        "file_name" => "jpgraph-2.3.3.tar.gz",
+        "file_name" => "jpgraph-2.3.4.tar.gz",
         "install_path" =>
-            "$install_dir/html/admin/common/jpgraph/jpgraph-2.3.3"
+            "$install_dir/html/admin/common/jpgraph/jpgraph-2.3.4"
     }
 };
 
