@@ -43,6 +43,8 @@
         added tests for compilation of CGI scripts
         usage of UNIVERSAL::require
           (http://www.packetfence.org/mantis/view.php?id=631)
+        updated jpgraph version
+          (http://www.packetfence.org/mantis/view.php?id=632)
 
 1.8.1
         authorized @ as first symbol in password
